# Tic-Tac-Toe-AI

./: .gitignore  CMakeLists.txt  build.bat  build.sh
src/: main.cpp
